# HSet

./: HSet.cabal  README.md  exi-map.cabal
src/Data/: ExiMap.hs
src/Data/ExiMap/: Internal.hs
src/Data/HSet/: Mutable.hs  Types.hs
test/: Spec.hs
test/Data/: ExiMapSpec.hs
